CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.8.4-dev

build loop
======================

* Add a JMX operation to retrieve build logs (CC-908). Adapted from patch by Ivan "Rambius" Ivanov. Tested by Antoine Levy Lambert.


CruiseControl Release Notes - 2.8.3

general
======================
* Update to checkstyle v4.4
* Disambiguated license information for some files that contained HP and Sony copyrights. (CC-889) Patch by Simon Steiner
* Replace Threads where Thread.start() was not called with Runnable to avoid leaks. (CC-895) Patch by Fabio Zadrozny

build loop
======================

BuildOutputLoggerManager
----------------------
* Use different loggers for different files.

DarcsBootstrapper
----------------------
* New Darcs bootstrapper (CC-905). Patch by Florian Gilcher. Patch by Phil.

Darcs
----------------------
* Remove extra "--match" command argument. Patch by Phil.

DateUtil
----------------------
* Make DateUtil thread safe (CC-906). Patch by Sebastian Koppehel

CMSynergy
----------------------
* Fix error publishing CMSynergy build (CC-876). Reported by Gerard Roos. Tested by David Corley.
* Allow specification of build and state attributes for baselines created with Synergy 6.4+ (CC-860). Patch by David Corley
* Log now captures CR Synopsis text when <cmsynergy> is used (CC-903). Patch by David Corley
* Add attribute in cmsynergysessionmonitor node (remoteclient) for remote-client connection in cm synergy (CC-910). Patch by Keith Mendoza
* Document fix for ccm_ui.log error commonly seen when running Cruisecontrol as a scheduled task (CC-960). Patch by David Corley

JNLPPublisher
----------------------
* A plugin that publishes the built jar into a folder and updates a jnlp file. Needs unit tests, documentation in configxml.html, and a new entry in default-plugins.properties (CC-917). Patch by Nuno da Costa Ferro.

Log
----------------------